Fix nav alignment on small screen size

--- a/assets/scss/global/_header.scss
+++ b/assets/scss/global/_header.scss
@@ -24,7 +24,7 @@
         display: flex;
         justify-content: center;
         
-        @include media-breakpoint-up(md) {
+        @include media-breakpoint-up(sm) {
             justify-content: end;
         }
 
